--- a/main.html
+++ b/main.html
@@ -9,10 +9,30 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <header>Hello</header>
-    <nav>Nav here</nav>
+    <header>
+        <img src="./imgs/logo.png" alt="This is a logo of shopping mall" class="logo">
+    </header>
+    <nav>
+        <button class="btn">
+            <img src="./imgs/blue_t.png" alt="tshirt" class="imgBtn">
+        </button>
+        <button class="btn">
+            <img src="./imgs/blue_p.png" alt="pants" class="imgBtn">
+        </button>
+        <button class="btn">
+            <img src="./imgs/blue_s.png" alt="skirt" class="imgBtn">
+        </button>
+        <button class="btn colorBtn blue">Blue</button>
+        <button class="btn colorBtn yellow">Yellow</button>
+        <button class="btn colorBtn pink">Pink</button>
+    </nav>
     <div>
-        list here
+        <ul class="items">
+            <li class="item">
+                <img src="./imgs/blue_t.png" alt="tshirt" class="item__thumbnail">
+                <span class="item__description">male, large</span>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
