--- a/main.html
+++ b/main.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="app.js"></script>
+    <script src="./src/app.js"></script>
 </head>
 <body>
-    <header>
-        <img src="./imgs/logo.png" alt="This is a logo of shopping mall" class="logo">
-    </header>
-    <nav>
+    <img src="./imgs/logo.png" alt="This is a logo of shopping mall" class="logo">
+    <section class="buttons">
         <button class="btn">
             <img src="./imgs/blue_t.png" alt="tshirt" class="imgBtn">
         </button>
@@ -25,14 +23,12 @@
         <button class="btn colorBtn blue">Blue</button>
         <button class="btn colorBtn yellow">Yellow</button>
         <button class="btn colorBtn pink">Pink</button>
-    </nav>
-    <div>
-        <ul class="items">
-            <li class="item">
-                <img src="./imgs/blue_t.png" alt="tshirt" class="item__thumbnail">
-                <span class="item__description">male, large</span>
-            </li>
-        </ul>
-    </div>
+    </section>
+    <ul class="items">
+        <li class="item">
+            <img src="./imgs/blue_t.png" alt="tshirt" class="item__thumbnail">
+            <span class="item__description">male, large</span>
+        </li>
+    </ul>
 </body>
 </html>
