--- a/main.html
+++ b/main.html
@@ -6,29 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping List Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="./src/app.js"></script>
+    <script src="./src/app.js" defer></script>
 </head>
 <body>
     <img src="./imgs/logo.png" alt="This is a logo of shopping mall" class="logo">
     <section class="buttons">
         <button class="btn">
-            <img src="./imgs/blue_t.png" alt="tshirt" class="imgBtn">
+            <img 
+                src="./imgs/blue_t.png" 
+                alt="tshirt" 
+                class="imgBtn" 
+                data-key="type" 
+                data-value="tshirt"
+            />
         </button>
         <button class="btn">
-            <img src="./imgs/blue_p.png" alt="pants" class="imgBtn">
+            <img 
+                src="./imgs/blue_p.png" 
+                alt="pants" 
+                class="imgBtn" 
+                data-key="type" 
+                data-value="pants" 
+            />
         </button>
         <button class="btn">
-            <img src="./imgs/blue_s.png" alt="skirt" class="imgBtn">
+            <img 
+                src="./imgs/blue_s.png" 
+                alt="skirt" 
+                class="imgBtn" 
+                data-key="type"
+                data-value="skirt" 
+            />
         </button>
-        <button class="btn colorBtn blue">Blue</button>
-        <button class="btn colorBtn yellow">Yellow</button>
-        <button class="btn colorBtn pink">Pink</button>
+        <button 
+            class="btn colorBtn blue"
+            data-key="color"
+            data-value="blue"
+        >Blue</button>
+        <button 
+            class="btn colorBtn yellow"
+            data-key="color"
+            data-value="yellow"
+        >Yellow</button>
+        <button 
+            class="btn colorBtn pink"
+            data-key="color"
+            data-value="pink"
+        >Pink</button>
     </section>
     <ul class="items">
-        <li class="item">
-            <img src="./imgs/blue_t.png" alt="tshirt" class="item__thumbnail">
-            <span class="item__description">male, large</span>
-        </li>
     </ul>
 </body>
 </html>
